crates/glyph-cli/tests/corpus/valid/block_meaningful_return_no_type_fixed.glyph
type Marker = <"a marker value">
type Diagnosis = <"a structured diagnosis of repo scope">

skill orchestrate() -> Marker
    description: "Orchestrate diagnosis."
    flow:
        produce_diagnosis()
        return <"a marker value">

block produce_diagnosis() -> Diagnosis
    description: "Produce a diagnosis of repo scope."
    flow:
        return <"a structured diagnosis of repo scope">
